feat : using pickle to  get  popular_df

--- a/book_recommender_system.ipynb
+++ b/book_recommender_system.ipynb
@@ -21,7 +21,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Akshay Kamath\\AppData\\Local\\Temp\\ipykernel_1644\\1004906641.py:1: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Akshay Kamath\\AppData\\Local\\Temp\\ipykernel_24480\\1004906641.py:1: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  books=pd.read_csv('books.csv')\n"
      ]
     }
@@ -4531,6 +4531,25 @@
    "source": [
     "recommend('Animal Farm')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "9ebad207",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle.dump(popular_df,open('popular.pkl','wb'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64d651e6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
